# docs/swagger.yaml
@@ -9,12 +9,15 @@ definitions:
     properties:
       Description:
         description: Описание автономной системы
-        example: Example ISP
-        type: string
+        example:
+        - '["Example ISP"]'
+        items:
+          type: string
+        type: array
       Number:
         description: Номер автономной системы
-        example: AS12345
-        type: string
+        example: 25513
+        type: integer
     type: object
   models.CategoryWithZone:
     properties:
@@ -433,6 +436,44 @@ paths:
           schema:
             $ref: '#/definitions/common.ErrorResponse'
       summary: Сканирует файл с использованием API Kaspersky
+      tags:
+      - Scan
+  /api/scan/screen:
+    post:
+      consumes:
+      - application/json
+      description: Эндпоинт для проверки веб-адреса, IP или домена и получения объединенного
+        ответа с информацией из Kaspersky API.
+      operationId: screen-check
+      parameters:
+      - description: Веб-адрес, IP или домен для проверки
+        example: www.example.com
+        in: query
+        name: request
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешная проверка. Возвращается объединенный ответ с информацией.
+          schema:
+            additionalProperties:
+              $ref: '#/definitions/models.ResponseFromAPI'
+            type: object
+        "400":
+          description: 'Bad Request: Incorrect query.'
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "404":
+          description: 'Not Found: Lookup results not found.'
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+      summary: Проверка веб-адреса, IP или домена из изображений через Kaspersky API
       tags:
       - Scan
   /api/scan/uri:
